fix: preserve cursor position after tag operations (v2.2.2)
- Fixed cursor jumping to top after creating/editing/removing tags
- Preserve scroll offset when reloading items after tag operations
- Updated documentation to clarify tag clear only affects fsel metadata

This is a PATCH release per Semantic Versioning 2.0.0.
Fixes UX issue introduced in 2.2.0-seedclay.

--- a/fsel.1
+++ b/fsel.1
@@ -1,4 +1,4 @@
-.TH FSEL 1 "2025-10-27" "2.2.1-seedclay" "User Commands"
+.TH FSEL 1 "2025-10-27" "2.2.2-seedclay" "User Commands"
 .SH NAME
 fsel \- fast TUI app launcher and fuzzy finder for GNU/Linux and *BSD
 .SH SYNOPSIS
@@ -118,7 +118,7 @@ List all tags (use with --cclip)
 List items with specific tag (use with --cclip)
 .TP
 .B \-\-tag clear
-Clear all tags and metadata from cclip database (use with --cclip)
+Clear tag metadata from fsel database (colors, emojis). Does not remove tags from cclip entries. (use with --cclip)
 .TP
 .B \-\-cclip-show-tag-color-names
 Show tag color names in clipboard item display (use with --cclip)
