--- a/fsel.1
+++ b/fsel.1
@@ -6,9 +6,9 @@ fsel \- fast TUI app launcher and fuzzy finder for GNU/Linux and *BSD
 [\fIOPTIONS\fR]
 .SH DESCRIPTION
 .B fsel
-is a terminal-based application launcher with fuzzy search, dmenu compatibility, and clipboard history integration. It scans XDG desktop entries and optionally PATH executables, providing a fast interface for launching applications.
+is a terminal-based application launcher with advanced fuzzy search, dmenu compatibility, and clipboard history integration. It scans XDG desktop entries and optionally PATH executables, providing a fast interface for launching applications.
 .PP
-Features frecency-based ranking (zoxide-style) to automatically surface frequently and recently used apps. Pin your favorites with Ctrl-Space for instant access.
+Features a sophisticated 12-tier search ranking system with frecency-based prioritization (zoxide-style) that automatically surfaces frequently and recently used apps. The ranking system prioritizes pinned apps, exact matches, prefix matches, and word-start matches, with configurable prefix depth for fine-tuning search behavior. Pin your favorites with Ctrl-Space for instant access.
 .SH OPTIONS
 .SS "App Launcher Options"
 .TP
@@ -59,6 +59,12 @@ Hide list until first character is typed
 .TP
 .BR \-\-match-mode " " \fIMODE\fR
 Match mode: 'fuzzy' or 'exact' (default: fuzzy)
+.TP
+.BR \-\-prefix-depth " " \fIN\fR
+Character depth for prefix matching priority (default: 3). When query length is within this depth, prefix matches (exact, word-start) are prioritized over fuzzy matches.
+.TP
+.BR \-T ", " \-\-test
+Enable debug/test mode with detailed logging. Logs are written to \fI~/.config/fsel/logs/\fR with timestamped filenames (fsel-debug-YYYYMMDD-HHMMSS-pidXXXXX.log). Logs include startup configuration, query changes, search snapshots with scoring breakdown, selection changes, launch events, and session statistics. Useful for debugging search ranking and analyzing performance.
 .TP
 .BR \-d ", " \-\-detach
 Detach launched applications from terminal session (compatible with --systemd-run and --uwsm)
@@ -135,6 +141,9 @@ Show concise help overview
 .BR \-H ", " \-\-help
 Show detailed tree-style help covering all modes
 .TP
+.BR \-T ", " \-\-test
+Enable debug/test mode with detailed logging. See App Launcher Options section for full description.
+.TP
 .BR \-V ", " \-\-version
 Show version number
 .SH CONFIGURATION
@@ -172,6 +181,7 @@ list_executables_in_path = false
 hide_before_typing = false
 match_mode = "fuzzy"
 confirm_first_launch = false
+prefix_depth = 3
 
 # Dmenu mode overrides (optional)
 [dmenu]
@@ -433,6 +443,9 @@ Lock file for single instance (app launcher mode)
 .TP
 .I ~/.cache/fsel/fsel-cclip.lock
 Lock file for single instance (cclip mode)
+.TP
+.I ~/.config/fsel/logs/fsel-debug-*.log
+Debug log files (created when using -T/--test flag)
 .TP
 .I /usr/share/applications/*.desktop
 System desktop entries
